# ERP-Backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
Utils/: Customers.py  employeeName.py  gcpUpload.py  vendorName.py
app/features/: annexures.py  employees.py  inventory.py  purchase_orders.py  quotations.py  vendors.py  work_orders.py
app/roles/: admin.py  project_engineer.py  project_manager.py  purchase.py  quality_engineer.py  sales.py  store.py
controllers/: Customer.py  DC.py  Employees.py  Inventory.py  PurchaseOrdersIn.py  PurchaseOrdersOut.py  Quotations.py  Rfq.py  Vendors.py  annexure.py  bom.py  company.py  greet.py  users.py  workOrders.py
dataControllers/: Customer.py  Customers.py  DC.py  Employees.py  Inventory.py  PurchaseOrdersIn.py  PurchaseOrdersOut.py  Quotations.py  Rfq.py  Vendors.py  annexure.py  company.py  cursor.py  users.py  workOrders.py
dataModels/: datbaseSetup.py
scripts/: fake_data_generation.py
