[project]
name = "erp-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "avinash84319",email = "avihanvaisri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "mysql-connector-python (>=9.2.0,<10.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "faker (>=37.0.0,<38.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
